# Enter-Biomodule-Demo-Android

./: .gitignore  build.gradle  settings.gradle
affective_local_sdk/: CMakeLists.txt  build.gradle.kts
affective_local_sdk/src/androidTest/java/cn/entertech/affective/: ExampleInstrumentedTest.kt
affective_local_sdk/src/test/java/cn/entertech/affective/: ExampleUnitTest.kt
affective_sdk_api/: build.gradle.kts
affective_sdk_api/src/main/java/cn/entertech/affective/sdk/api/: IAffectiveDataAnalysisService.kt  IFinishAffectiveServiceListener.kt
affective_sdk_api/src/main/java/cn/entertech/affective/sdk/bean/: EnterAffectiveConfigProxy.kt  UploadReportEntity.kt
affective_sdk_api/src/main/java/cn/entertech/affective/sdk/bean/report/: Affective.kt  AffectiveTimePoints.kt  AffectiveVersion.kt  Arousal.kt  Attention.kt  Biodata.kt  BiodataTimePoints.kt  BiodataVersion.kt  Coherence.kt  Data.kt  Eeg.kt  HrData.kt  HrV2.kt  Meditation.kt  PEPR.kt  Pleasure.kt  Pressure.kt  Relaxation.kt  Sceeg.kt  Sleep.kt  TagData.kt  TimePoint.kt  TimePoints.kt  Version.kt
affective_sdk_api/src/main/java/cn/entertech/affective/sdk/bean/type/: BioDataCategory.kt  BrainWaveDataType.kt  IDataType.kt  PhysiologyDataCategory.kt
affectivecloudsdk/: build.gradle
affectivecloudsdk/src/main/java/cn/entertech/affectivecloudsdk/: EnterAffectiveCloudApiImpl.kt  EnterAffectiveCloudConfig.kt  EnterAffectiveCloudManager.kt  EnterAffectiveCloudService.kt  WebSocketHelper.kt
affectivecloudsdk/src/main/java/cn/entertech/affectivecloudsdk/interfaces/: BaseApi.kt
affectivecloudsdk/src/main/java/cn/entertech/affectivecloudsdk/utils/: ReportGenerator.kt
demo/: build.gradle
demo/src/main/java/cn/entertech/biomoduledemo/activity/: ApiDetailActivity.kt  MainActivity.kt
gradle/wrapper/: gradle-wrapper.properties
